there are some update pending

--- a/cohort.html
+++ b/cohort.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yamloki Coding Room</title>
+  <title>Cohort 2.0 - Yamloki</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
@@ -27,13 +27,19 @@
     </div>
   </nav>
 
-  <main class="main-heading">
-    <h1>
-      We only <span class="text-highlight">teach</span><br />
-      <span class="center-line">what we are really</span><br />
-      <span class="really-line2">really</span> <span class="italic">good</span> at.
-    </h1>
-    <button class="check-Courses" onclick="location.href='courses.html'">Check Courses</button>
+  <main class="main-heading" style="padding-top:140px; text-align:left;">
+    <h1>Cohort 2.0</h1>
+    <p style="max-width:900px; margin-top:12px;">Information about Cohort 2.0.</p>
+
+    <section style="margin-top:30px;">
+      <h2>Overview</h2>
+      <p>Our cohort-based learning includes weekly mentorship, projects, and peer reviews.</p>
+    </section>
+
+    <section style="margin-top:20px;">
+      <h2>Schedule</h2>
+      <p>Classes run for 12 weeks with weekend workshops.</p>
+    </section>
   </main>
 
   <script src="script.js"></script>
